# contique

./: .flake8  CHANGELOG.md  CITATION.cff  GUIDE.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: coverage.yml  python-publish.yml  upload-codecov.yml
contigue/: __init__.py  _solver.py  newtonrhapson.py  solve.py
contique/: __init__.py  helpers.py  jacobian.py  newton.py  newtonrhapson.py  newtonxt.py  numcont.py  printinfo.py  solve.py
src/contique/: __init__.py  helpers.py  jacobian.py  newton.py  newtonxt.py  numcont.py  printinfo.py
test/: test_archimedean_spiral.py  test_archimedean_spiral_noargs.py  test_archimedian_spiral.py  test_bratu.py  test_lituus_spiral.py  test_log_spiral.py  test_sin.py  test_sin_rebalance.py  test_sincos.py  test_twotruss.py
tests/: test_archimedean_spiral.py  test_archimedean_spiral_noargs.py  test_bratu.py  test_lituus_spiral.py  test_log_spiral.py  test_sin_rebalance.py  test_sincos.py  test_twotruss.py
