[metadata]
name = contique
version = 0.1.11
author = Andreas Dutzler
author_email = a.dutzler@gmail.com
description = Numerical continuation of nonlinear equilibrium equations
url = https://github.com/adtzlr/contique
project_urls =
    Code=https://github.com/adtzlr/contique
    Issues=https://github.com/adtzlr/contique/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
install_requires =
    numpy
python_requires = >=3.6